--- a/test_resize.html
+++ b/test_resize.html
@@ -29,7 +29,7 @@ var form = document.getElementById('form');
   <!-- processfile(data) -->
 <!-- })() -->
 
-const imgurl = "https://cdn62.picsart.com/182788826000202.jpg?type=webp&to=crop&r=256"
+const imgurl = "https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
 fetch(imgurl)
   .then(response => response.blob())
   .then(myBlob => {
