--- a/test_resize.html
+++ b/test_resize.html
@@ -36,7 +36,8 @@ fetch(imgurl)
   var urlCreator = window.URL || window.webkitURL;
    var imageUrl = urlCreator.createObjectURL(myBlob);
    const myImgElem = document.getElementById('my-img');
-   myImgElem.src = resizeMe(imageUrl);
+   myImgElem.src = imageUrl;
+   resizeMe(myImgElem);
 })
 
 
