--- a/test_resize.html
+++ b/test_resize.html
@@ -35,7 +35,8 @@ fetch(imgurl)
   .then(myBlob => {
   var urlCreator = window.URL || window.webkitURL;
    var imageUrl = urlCreator.createObjectURL(myBlob);
-   const myImgElem = document.getElementById('my-img');
+   //const myImgElem = document.getElementById('my-img');
+   var ImgElem = new Image;
    myImgElem.src = imageUrl;
    resizeMe(myImgElem);
 })
@@ -124,7 +125,8 @@ fileinput.onchange = function(){
 function resizeMe(img) {
   
   var canvas = document.createElement('canvas');
-
+  var newDiv = document.createElement('img');
+  
   var width = img.width;
   var height = img.height;
 
@@ -149,7 +151,7 @@ function resizeMe(img) {
   var ctx = canvas.getContext("2d");
   ctx.drawImage(img, 0, 0, width, height);
   
-  preview.appendChild(canvas); // do the actual resized preview
+  newDiv.appendChild(canvas); // do the actual resized preview
   
   return canvas.toDataURL("image/jpeg",0.7); // get the data from canvas as 70% JPG (can be also PNG, etc.)
 
