--- a/test_resize.html
+++ b/test_resize.html
@@ -151,8 +151,8 @@ function resizeMe(img) {
   var ctx = canvas.getContext("2d");
   ctx.drawImage(img, 0, 0, width, height);
   
-  newDiv.appendChild(canvas); // do the actual resized preview
-  
+  //newDiv.appendChild(canvas); // do the actual resized preview
+  document.getElementById("my-img").innerHTML = canvas;
   return canvas.toDataURL("image/jpeg",0.7); // get the data from canvas as 70% JPG (can be also PNG, etc.)
 
 }
