--- a/test_resize.html
+++ b/test_resize.html
@@ -39,7 +39,7 @@ fetch(imgurl)
    var myImgElem = new Image;
    
    myImgElem.src = imageUrl;
-   const canvas = document.createElement(‘canvas’);
+   const canvas = document.createElement('canvas');
 	canvas.width = "50";
 	canvas.height = "50";
 	
