--- a/test_resize.html
+++ b/test_resize.html
@@ -3,7 +3,7 @@
 <input type="text" class="your-nft" id="fileinput" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;">
 <canvas id='form'></canvas>
 <img id='myImg'></img>
-<canvas id="my-img" width="200" height="100"></canvas>
+<img id="my-img" width="200" height="100"></img>
 <input type="button" class="btn" value="resize" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="processfile()"/>
 </body>
 <head>
