--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1295,10 +1295,32 @@ var display = (async function(){
 	}
 	
 	var _image2 = await contract_bal.methods.tokens_image2xy(i, address, j).call();
-	console.log(_image2);
-	var img = new Image();
-	img.src = _image2
+	const imgurl = _image2 //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
+fetch(imgurl)
+  .then(response => response.blob())
+  .then(myBlob => {
+  var urlCreator = window.URL || window.webkitURL;
+   var imageUrl = urlCreator.createObjectURL(myBlob);
+   //const myImgElem = document.getElementById('my-img');
+   //var myImgElem = new Image;
+   
+   //myImgElem.src = imageUrl;
+   var img = new Image();
+	img.src = imageUrl
+	img.width = "50"
+	img.height = "50"
 	ew2Div.appendChild(img);
+   
+  
+})
+	
+	
+	
+	
+	
+	
+	console.log(_image2);
+	
 	
 	
 	}
