--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1216,9 +1216,14 @@ fetch(imgurl)
    //myImgElem.src = imageUrl;
    var img = new Image();
 	img.src = imageUrl
-	img.width = "50"
-	img.height = "50"
-	ew1Div.appendChild(img);
+	var canvas = document.getElementById('canvas');
+            var ctx = canvas.getContext('2d');
+
+            canvas.width = (img.width)/3;
+            canvas.height = (img.height)/3;
+
+            ctx.drawImage(img, 0, 0);
+	ew1Div.appendChild(canvas);
    
   
 })
