--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1219,7 +1219,7 @@ fetch(imgurl)
 	ew1Div.addEventListener("load", getCanvas);
 	//img.onload = function (){
 	function getCanvas(){
-			var canvas = document.getElementById('canvas');
+			var canvas = document.createElement('canvas');
             var ctx = canvas.getContext('2d');
 
             canvas.width = img.width;
