--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -43,13 +43,13 @@ border: 2px solid #5F6C6D;
 
 }
 
-img {
+<!-- img { -->
 
-width: 35px;
-height: 35px;
-border: 2px solid #5F6C6D;
+<!-- width: 35px; -->
+<!-- height: 35px; -->
+<!-- border: 2px solid #5F6C6D; -->
 
-}
+<!-- } -->
 
 
 
