--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1175,7 +1175,7 @@ var display = (async function(){
 	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
 	//chat.appendChild(newDiv);
 	//ew1Div.addEventListener("load", getImage);
-	document.getElementById("rs" + i + j).outerHTML = '<canvas id="myCanvas" width="200" height="100"></canvas>'
+	document.getElementById('rs' + i + j).outerHTML = '<canvas id="myCanvas" width="200" height="100"></canvas>'
 	
 	function getImage(xhttp){
 			//var result = xhttp.response;
