--- a/resize_image2.html
+++ b/resize_image2.html
@@ -25,6 +25,7 @@ fetch(imgurl)
    myImgElem.src = imageUrl;
    
    var resized = resizeMe(myImgElem); // send it to canvas
+   alert(resized)
       var newinput = document.createElement("input");
       newinput.type = 'hidden';
       newinput.name = 'images[]';
