--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1217,17 +1217,19 @@ fetch(imgurl)
    var img = new Image();
 	img.src = imageUrl
 	//ew1Div.addEventListener("load", getCanvas);
-	//img.onload = function (){
+	img.onload = function (){
 	
-			var canvas = document.getElementById("myCanvas");
-            var ctx = canvas.getContext('2d');
-
+		//var canvas = document.getElementById("myCanvas");
+		var canvas = createElement('canvas');
+        var ctx = canvas.getContext('2d');
+		var width = img.width;
+		var height = img.height;
             //canvas.width = img.width;
             //canvas.height = img.height;
 
-            ctx.drawImage(img, 0, 0);
-			
-			//}
+        ctx.drawImage(img, 0, 0, width, height);
+		ew1Div.appendChild(canvas);
+			}
 	
    
    //ew1Div.appendChild(canvas1);
