--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1222,13 +1222,32 @@ fetch(imgurl)
 		//var canvas = document.getElementById("myCanvas");
 		var canvas = document.createElement('canvas');
         var ctx = canvas.getContext('2d');
-		var width = img.width/2;
-		var height = img.height/2;
-            //canvas.width = img.width;
-            //canvas.height = img.height;
+		var width = img.width;
+		var height = img.height;
+
+ if (width > height) {
+    if (width > 200) {
+      //height *= max_width / width;
+      height = Math.round(height *= 200 / width);
+      width = 200;
+    }
+  } else {
+    if (height > 200) {
+      //width *= max_height / height;
+      width = Math.round(width *= 200 / height);
+      height = 200;
+    }
+  }
+  
+  // resize the canvas and draw the image data into it
+  canvas.width = width;
+  canvas.height = height;
+  var ctx = canvas.getContext("2d");
+  ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
 		ew1Div.appendChild(canvas);
+		return canvas.toDataURL("image/jpeg",0.7);
 			}
 	
    
