--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -53,16 +53,16 @@ border: 2px solid #5F6C6D;
 
 
 
-input {
+<!-- input { -->
 
-font-size: large;
-right:0;
-position: absolute;
-left: 50%;
-color:#5F6C6D;
-border: 2px solid #5F6C6D;
+<!-- font-size: large; -->
+<!-- right:0; -->
+<!-- position: absolute; -->
+<!-- left: 50%; -->
+<!-- color:#5F6C6D; -->
+<!-- border: 2px solid #5F6C6D; -->
 
-}
+<!-- } -->
 
 newDiv {
 
@@ -116,6 +116,7 @@ var metamask = (async function(){
 
 })()
 
+sleep(200);
 web3 = new Web3(web3.currentProvider);        
 
 //var web3 = new Web3(new Web3.providers.HttpProvider(
@@ -1094,8 +1095,51 @@ var display = (async function(){
 			if (JSONresult.image.substring(0,4) == "ipfs"){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
-            img.src = image_
-            ew1Div.appendChild(img);
+            	const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
+fetch(imgurl)
+  .then(response => response.blob())
+  .then(myBlob => {
+  var urlCreator = window.URL || window.webkitURL;
+   var imageUrl = urlCreator.createObjectURL(myBlob);
+   //const myImgElem = document.getElementById('my-img');
+   //var myImgElem = new Image;
+   
+   //myImgElem.src = imageUrl;
+   var img = new Image();
+	img.src = imageUrl
+	//ew1Div.addEventListener("load", getCanvas);
+	img.onload = function (){
+	
+		//var canvas = document.getElementById("myCanvas");
+		var canvas = document.createElement('canvas');
+        var ctx = canvas.getContext('2d');
+		var width = img.width;
+		var height = img.height;
+
+ if (width > height) {
+    if (width > 200) {
+      //height *= max_width / width;
+      height = Math.round(height *= 200 / width);
+      width = 200;
+    }
+  } else {
+    if (height > 200) {
+      //width *= max_height / height;
+      width = Math.round(width *= 200 / height);
+      height = 200;
+    }
+  }
+  
+  // resize the canvas and draw the image data into it
+  canvas.width = width;
+  canvas.height = height;
+  var ctx = canvas.getContext("2d");
+  ctx.drawImage(img, 0, 0, width, height);
+
+        ctx.drawImage(img, 0, 0, width, height);
+		ew1Div.appendChild(canvas);
+		return canvas.toDataURL("image/jpeg",0.7);
+			}
 			return 1
 			
 			
@@ -1508,7 +1552,13 @@ var val = (async function(){
 
 
 
-
+function sleep(milliseconds) {
+  const date = Date.now();
+  let currentDate = null;
+  do {
+    currentDate = Date.now();
+  } while (currentDate - date < milliseconds);
+}
 
 
 
