--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -36,9 +36,23 @@ cursor: pointer;
 
 div {
 border-radius: 25px;
-width: 500px;
-height: 150px;
 border: 2px solid #5F6C6D;
+background-size: auto;
+
+}
+
+div.odd {
+
+height: 50%;
+width: 50%;
+
+
+}
+
+div.even {
+
+height: 50%;
+width: 50%;
 
 }
 
@@ -116,7 +130,7 @@ var metamask = (async function(){
 
 })()
 
-sleep(200);
+//sleep(200);
 web3 = new Web3(web3.currentProvider);        
 
 //var web3 = new Web3(new Web3.providers.HttpProvider(
@@ -1041,6 +1055,7 @@ var display = (async function(){
 	
 	chat.appendChild(ewDiv);
 	var ew1Div = document.createElement('div');
+	ew1Div.class = "odd";
 	ewDiv.appendChild(ew1Div);
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	var newDiv = document.createElement('div');
@@ -1175,7 +1190,7 @@ fetch(imgurl)
 	ewDiv.appendChild(newDiv);
 	document.getElementById("ss" + i).outerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
 	var ew2Div = document.createElement('div');
-	
+	ew1Div.class = "even";
 	ewDiv.appendChild(ew2Div);
 	for (j=0;j<contract_length1;j++){ 
 	
