--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -35,7 +35,8 @@ cursor: pointer;
 }
 
 div {
-border-radius: 100px;
+border-radius: 25px;
+padding: 50px;
 border: 2px solid #5F6C6D;
 background-size: auto;
 
