--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -34,8 +34,9 @@ cursor: pointer;
   border: 2px solid #aaaaaa;
 }
 
-div {
+main {
 border-radius: 25px;
+padding: 5px;
 border: 2px solid #5F6C6D;
 background-size: auto;
 
@@ -58,8 +59,8 @@ width: 50%;
 
 img {
 
-width: 50px;
-height: 50px;
+width: 85px;
+height: 85px;
 border: 2px solid #5F6C6D;
 
 }
@@ -1050,7 +1051,8 @@ var display = (async function(){
 	
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
-	var ewDiv = document.createElement('div');
+	var ewDiv = document.createElement('main');
+	
 	//ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
