--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -34,7 +34,7 @@ cursor: pointer;
   border: 2px solid #aaaaaa;
 }
 
-div.box {
+main {
 border-radius: 25px;
 padding: 5px;
 border: 2px solid #5F6C6D;
@@ -1051,8 +1051,8 @@ var display = (async function(){
 	
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
-	var ewDiv = document.createElement('div');
-	ewDiv.class = "box"
+	var ewDiv = document.createElement('main');
+	
 	//ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
