--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -59,8 +59,8 @@ width: 50%;
 
 img {
 
-width: 85px;
-height: 85px;
+width: 115px;
+height: 115px;
 border: 2px solid #5F6C6D;
 
 }
@@ -1190,7 +1190,7 @@ fetch(imgurl)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	ewDiv.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
+	document.getElementById("ss" + i).outerHTML = '<center style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;"> &#10506; swap &#10507;</center>'
 	var ew2Div = document.createElement('div');
 	ew1Div.class = "even";
 	ewDiv.appendChild(ew2Div);
