--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1103,9 +1103,12 @@ var display = (async function(){
 			
 			
 			
-			
-			JSONresult = JSON.parse(result);
-			
+			try{
+				JSONresult = JSON.parse(result);
+			}
+			catch(err){
+				JSONresult = result;
+			}
 			//JSONresult = result
 			
 			//console.log(JSONresult.image);
