--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1098,7 +1098,7 @@ var display = (async function(){
 			//var result = xhttp.response;
 			
 			var result = xhttp.response;
-			
+			console.log(result)
 			
 			
 			
