--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1456,93 +1456,93 @@ var img = await image_and_name(k,n)
 })()
 }
 	
-function transfer_to_lender(addx, id){
-var acct = (async function(){
+<!-- function transfer_to_lender(addx, id){ -->
+<!-- var acct = (async function(){ -->
   	
-  //var result = await getAccounts()
-	await window.ethereum.enable();
+  <!-- //var result = await getAccounts() -->
+	<!-- await window.ethereum.enable(); -->
 	
 	
-	//var add1x = localStorage.getItem("mySharedData");
-	var add1x = addx
+	<!-- //var add1x = localStorage.getItem("mySharedData"); -->
+	<!-- var add1x = addx -->
 	
 	
-	var nft_k = localStorage.getItem("NFT Contract");
-	//var nft_id = localStorage.getItem("NFT Token ID");
-	//var nft_id = id
-	var tokenID = await contract_bal.methods.tokens_list1(address).call();
-	console.log(tokenID)
-	var loan_amt = localStorage.getItem("Loan Amount");
-	var loan_term = localStorage.getItem("Loan Term");
+	<!-- var nft_k = localStorage.getItem("NFT Contract"); -->
+	<!-- //var nft_id = localStorage.getItem("NFT Token ID"); -->
+	<!-- //var nft_id = id -->
+	<!-- var tokenID = await contract_bal.methods.tokens_list1(address).call(); -->
+	<!-- console.log(tokenID) -->
+	<!-- var loan_amt = localStorage.getItem("Loan Amount"); -->
+	<!-- var loan_term = localStorage.getItem("Loan Term"); -->
 	
- 	//var contract = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.TransferToLender(add1x, nft_id).encodeABI();
-        var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        var account = accounts[0];
-		var amt = await contract_bal.methods.loan_amount_list(add1x).call();
+ 	<!-- //var contract = web3.utils.toChecksumAddress(nft_k) -->
+        <!-- var _data = new web3.eth.Contract(abi, contract_address).methods.TransferToLender(add1x, nft_id).encodeABI(); -->
+        <!-- var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' }); -->
+        <!-- var account = accounts[0]; -->
+		<!-- var amt = await contract_bal.methods.loan_amount_list(add1x).call(); -->
 	
-	var result = await web3.eth.getTransactionCount(account)
-	_nonce = result
-        console.log(account)
+	<!-- var result = await web3.eth.getTransactionCount(account) -->
+	<!-- _nonce = result -->
+        <!-- console.log(account) -->
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(200000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'nonce': web3.utils.toHex(_nonce),'data': _data})
-         //window.ethereum.on('accountsChanged', function (accounts) {
-            // Time to reload your interface with accounts[0]!
-            //console.log(accounts[0])
+	<!-- await web3.eth.sendTransaction({'gas': web3.utils.toHex(200000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'nonce': web3.utils.toHex(_nonce),'data': _data}) -->
+         <!-- //window.ethereum.on('accountsChanged', function (accounts) { -->
+            <!-- // Time to reload your interface with accounts[0]! -->
+            <!-- //console.log(accounts[0]) -->
            	
-  //console.log('Woo done!', result[0])
-  //balance = result
-  //alert(balance)
+  <!-- //console.log('Woo done!', result[0]) -->
+  <!-- //balance = result -->
+  <!-- //alert(balance) -->
 
-})()
-}
+<!-- })() -->
+<!-- } -->
 
-function reclaim_asset(){
-var acct = (async function(){
+<!-- function reclaim_asset(){ -->
+<!-- var acct = (async function(){ -->
   	
-  //var result = await getAccounts()
-	await window.ethereum.enable();
-	localStorage.setItem("mySharedData", document.getElementById("password").value);
-	localStorage.setItem("mySharedData1", document.getElementById("user_name").value);
-	localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
+  <!-- //var result = await getAccounts() -->
+	<!-- await window.ethereum.enable(); -->
+	<!-- localStorage.setItem("mySharedData", document.getElementById("password").value); -->
+	<!-- localStorage.setItem("mySharedData1", document.getElementById("user_name").value); -->
+	<!-- localStorage.setItem("mySharedData2", document.getElementById("user_name1").value); -->
 	
-	var add1x = localStorage.getItem("mySharedData");
-	var add2x = localStorage.getItem("mySharedData2");
-	var token_nx = localStorage.getItem("mySharedData1");
+	<!-- var add1x = localStorage.getItem("mySharedData"); -->
+	<!-- var add2x = localStorage.getItem("mySharedData2"); -->
+	<!-- var token_nx = localStorage.getItem("mySharedData1"); -->
 	
-	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
-	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
-	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
-	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
+	<!-- localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value); -->
+	<!-- localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value); -->
+	<!-- localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value); -->
+	<!-- localStorage.setItem("Loan Term", document.getElementById("loan_term").value); -->
 	
-	var nft_k = localStorage.getItem("NFT Contract");
-	var nft_id = localStorage.getItem("NFT Token ID");
-	var loan_amt = localStorage.getItem("Loan Amount");
-	var loan_term = localStorage.getItem("Loan Term");
+	<!-- var nft_k = localStorage.getItem("NFT Contract"); -->
+	<!-- var nft_id = localStorage.getItem("NFT Token ID"); -->
+	<!-- var loan_amt = localStorage.getItem("Loan Amount"); -->
+	<!-- var loan_term = localStorage.getItem("Loan Term"); -->
 	
- 	var contract = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.ReturnToBorrower().encodeABI();
-        var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        var account = accounts[0];
-		var amt = await contract_bal.methods.loan_amount_list(add1x).call();
-	var _amt = parseInt(amt) + (amt/50) + 1
-	console.log(amt);
-	console.log(_amt);
-	var result = await web3.eth.getTransactionCount(account)
-	_nonce = result
-        console.log(account)
+ 	<!-- var contract = web3.utils.toChecksumAddress(nft_k) -->
+        <!-- var _data = new web3.eth.Contract(abi, contract_address).methods.ReturnToBorrower().encodeABI(); -->
+        <!-- var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' }); -->
+        <!-- var account = accounts[0]; -->
+		<!-- var amt = await contract_bal.methods.loan_amount_list(add1x).call(); -->
+	<!-- var _amt = parseInt(amt) + (amt/50) + 1 -->
+	<!-- console.log(amt); -->
+	<!-- console.log(_amt); -->
+	<!-- var result = await web3.eth.getTransactionCount(account) -->
+	<!-- _nonce = result -->
+        <!-- console.log(account) -->
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(200000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': _amt, 'nonce': web3.utils.toHex(_nonce),'data': _data})
-         //window.ethereum.on('accountsChanged', function (accounts) {
-            // Time to reload your interface with accounts[0]!
-            //console.log(accounts[0])
+	<!-- await web3.eth.sendTransaction({'gas': web3.utils.toHex(200000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': _amt, 'nonce': web3.utils.toHex(_nonce),'data': _data}) -->
+         <!-- //window.ethereum.on('accountsChanged', function (accounts) { -->
+            <!-- // Time to reload your interface with accounts[0]! -->
+            <!-- //console.log(accounts[0]) -->
            	
-  //console.log('Woo done!', result[0])
-  //balance = result
-  //alert(balance)
+  <!-- //console.log('Woo done!', result[0]) -->
+  <!-- //balance = result -->
+  <!-- //alert(balance) -->
 
-})()
-}
+<!-- })() -->
+<!-- } -->
 
 
 
