--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1060,9 +1060,9 @@ var display = (async function(){
 	ew1Div.class = "odd";
 	ewDiv.appendChild(ew1Div);
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
-	var newDiv = document.createElement('div');
-	newDiv.id = 'q'+i;
-	ew1Div.appendChild(newDiv);
+	//var newDiv = document.createElement('div');
+	ew1Div.id = 'q'+i;
+	//ew1Div.appendChild(newDiv);
 	document.getElementById("q" + i).innerHTML = "  OFFER NO: " + i
 	document.getElementById("q" + i).style = "font-weight: bold;"
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
