--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1180,7 +1180,7 @@ fetch(imgurl)
 	newDiv.id = 's'+i + j;
 	ew1Div.appendChild(newDiv);
 	
-	document.getElementById("s" + i + j).innerHTML = name //"NFT Token ID1: " + tokenID;
+	document.getElementById("s" + i + j).innerHTML = "  OFFER NO: " + i + " " + name //"NFT Token ID1: " + tokenID;
 	
 	 }
 	
