--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1165,6 +1165,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
+		ctx.fillText(name, 20, 20)
 		ew1Div.appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.5);
 			}
