--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1165,7 +1165,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		ctx.fillText(name, 20, 20)
+		ctx.fillText(name, 30, 30)
 		ew1Div.appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.5);
 			}
@@ -1181,7 +1181,7 @@ fetch(imgurl)
 	//newDiv.id = 'rs'+i + j;
 	ew1Div.appendChild(newDiv);
 	
-	document.getElementById("rs" + i + j).innerHTML = "  OFFER NO: " + i + " " + name //"NFT Token ID1: " + tokenID;
+	//document.getElementById("rs" + i + j).innerHTML = "  OFFER NO: " + i + " " + name //"NFT Token ID1: " + tokenID;
 	
 	 }
 	
