--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1083,8 +1083,8 @@ var display = (async function(){
 	
 	var image = await image_and_name(contract_ID1, tokenID, getImage);
 	//console.log(image);
-	var newDiv = document.createElement('img');
-	newDiv.id = 'rs'+i + j;
+	//var newDiv = document.createElement('img');
+	//newDiv.id = 'rs'+i + j;
 	//newDiv.setAttribute('width', '15%');
 	//newDiv.setAttribute('height', '15%');
 	newDiv.loading = "lazy";
