--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1179,7 +1179,7 @@ fetch(imgurl)
 	
 	//var newDiv = document.createElement('div');
 	//newDiv.id = 'rs'+i + j;
-	ew1Div.appendChild(newDiv);
+	//ew1Div.appendChild(newDiv);
 	
 	//document.getElementById("rs" + i + j).innerHTML = "  OFFER NO: " + i + " " + name //"NFT Token ID1: " + tokenID;
 	
