--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1320,11 +1320,11 @@ fetch(imgurl)
 	ew2Div.appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
-	var newDiv = document.createElement('div');
-	newDiv.id = 'w'+i;
-	ew2Div.appendChild(newDiv);
+	<!-- var newDiv = document.createElement('div'); -->
+	<!-- newDiv.id = 'w'+i; -->
+	<!-- ew2Div.appendChild(newDiv); -->
 	
-	document.getElementById("w" + i).innerHTML = "swap completed: " + latest;
+	document.getElementById("qs" + i).innerHTML = "swap completed: " + latest;
 	//document.getElementById("latest_block").innerHTML = latest;
 	//console.log(latest)
 	
