--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -101,7 +101,7 @@ font-size: large;
 
 
 <body>
-<img id="logo" src=logoCapture.PNG></img>
+<img id="logo" src=logoCapture1.PNG></img>
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
@@ -1035,18 +1035,18 @@ var display = (async function(){
 	
 	var ewDiv = document.createElement('div');
 	
-	//ewDiv.id = 'r'+i;
+	ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
 	var ew1Div = document.createElement('div');
-	ew1Div.class = "odd";
+	<!-- ew1Div.class = "odd"; -->
 	ewDiv.appendChild(ew1Div);
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	//var newDiv = document.createElement('div');
 	ew1Div.id = 'q'+i;
 	//ew1Div.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = "  OFFER NO: " + i
-	document.getElementById("q" + i).style = "font-weight: bold;"
+	document.getElementById("r" + i).innerHTML = "  OFFER NO: " + i
+	document.getElementById("r" + i).style = "font-weight: bold;"
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
