--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1039,7 +1039,7 @@ var display = (async function(){
 	
 	chat.appendChild(ewDiv);
 	var ew1Div = document.createElement('div');
-	<!-- ew1Div.class = "odd"; -->
+	ew1Div.class = "odd";
 	ewDiv.appendChild(ew1Div);
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	//var newDiv = document.createElement('div');
