--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -102,7 +102,7 @@ font-size: large;
 
 <body>
 <img id="logo" src=logoCapture2.PNG></img>
-<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0; border-radius: 25px;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
 	
@@ -1036,7 +1036,8 @@ var display = (async function(){
 	var ewDiv = document.createElement('div');
 	
 	ewDiv.id = 'r'+i;
-	
+	document.getElementById("r" + i).innerHTML = "  OFFER NO: " + i
+	document.getElementById("r" + i).style = "font-weight: bold;"
 	chat.appendChild(ewDiv);
 	var ew1Div = document.createElement('div');
 	ew1Div.class = "odd";
@@ -1045,8 +1046,7 @@ var display = (async function(){
 	//var newDiv = document.createElement('div');
 	ew1Div.id = 'q'+i;
 	//ew1Div.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = "  OFFER NO: " + i
-	document.getElementById("q" + i).style = "font-weight: bold;"
+	
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
