--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1036,7 +1036,7 @@ var display = (async function(){
 	var ewDiv = document.createElement('div');
 	
 	ewDiv.id = 'r'+i;
-	ew1Div.class = "main";
+	ewDiv.class = "main";
 	
 	chat.appendChild(ewDiv);
 	var ew1Div = document.createElement('div');
