--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1035,18 +1035,20 @@ var display = (async function(){
 	
 	var ewDiv = document.createElement('div');
 	
-	ewDiv.id = 'r'+i;
+	
 	
 	
 	chat.appendChild(ewDiv);
+	ewDiv.id = 'r'+i;
+	document.getElementById("r" + i).innerHTML = "  OFFER NO: " + i
+	document.getElementById("r" + i).style = "font-weight: bold;"
 	var ew1Div = document.createElement('div');
 	ew1Div.class = "odd";
 	ewDiv.appendChild(ew1Div);
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	//var newDiv = document.createElement('div');
-	ew1Div.id = 'q'+i;
-	document.getElementById("q" + i).innerHTML = "  OFFER NO: " + i
-	document.getElementById("q" + i).style = "font-weight: bold;"
+	//ew1Div.id = 'q'+i;
+	
 	//ew1Div.appendChild(newDiv);
 	
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
