--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -101,7 +101,7 @@ font-size: large;
 
 
 <body>
-<img id="logo" src=logoCapture2.PNG></img>
+<img id="logo" src=logoCapture2.PNG style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large; border-radius: 25px></img>
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0; border-radius: 25px;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
@@ -1321,7 +1321,7 @@ fetch(imgurl)
 	newBtn.id = 'a' + i;
 	
 	
-	ew2Div.appendChild(newBtn);
+	newDiv.appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
 	<!-- var newDiv = document.createElement('div'); -->
