--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -59,9 +59,10 @@ width: 50%;
 
 img {
 
-width: 115px;
-height: 115px;
-border: 2px solid #5F6C6D;
+color:#5F6C6D; 
+font-family: helvetica narrow, sans-serif;
+font-size: x-large;
+border-radius: 25px;
 
 }
 
@@ -101,8 +102,8 @@ font-size: large;
 
 
 <body>
-<img id="logo" src=logoCapture2.PNG style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large; border-radius: 25px></img>
-<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0; border-radius: 25px;" onclick="open_window()"">offer trade</button>
+<img id="logo"></img>
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
 	
