--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1322,7 +1322,7 @@ fetch(imgurl)
 	newBtn.id = 'a' + i;
 	
 	
-	newDiv.appendChild(newBtn);
+	ew2Div.appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
 	<!-- var newDiv = document.createElement('div'); -->
