--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -60,8 +60,9 @@ width: 50%;
 img {
 
 color:#5F6C6D; 
+padding: 5px;
 font-family: helvetica narrow, sans-serif;
-font-size: x-large;
+font-size: large;
 border-radius: 25px;
 
 }
