--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -62,7 +62,7 @@ img {
 color:#5F6C6D; 
 padding: 5px;
 font-family: helvetica narrow, sans-serif;
-font-size: large;
+font-size: 25px;
 border-radius: 25px;
 
 }
@@ -103,7 +103,7 @@ font-size: large;
 
 
 <body>
-<img id="logo" src=logoCapture2.PNG></img>
+<img id="logo" src=logoCapture1.PNG></img>
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
